platform-apps/infrastructure-apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-service
  namespace: platform-tools
spec:
  type: ClusterIP
  ports:
    - port: 5678
      targetPort: 5678
      protocol: TCP
      name: http
  selector:
    app: n8n
