platform-apps/infrastructure-apps/n8n/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: platform-tools
spec:
  parentRefs:
    - name: main-aws-alb-gateway
      namespace: kube-system
  hostnames:
    - "n8n.yourcompany.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n-service
          port: 5678
